removed margin right on favourite text scss, causing text wrapping issues

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_favourite.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_favourite.scss
@@ -14,7 +14,6 @@
     position: relative;
     margin-left: 64px;
     display: inline-block;
-    margin-right: .8em;
 }
 
 .favourite-icon {
